--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/orm": "^2.11",
+        "easycorp/easyadmin-bundle": "^3.5",
         "mailjet/mailjet-apiv3-php": "^1.5",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/apache-pack": "^1.0",
