--- a/.env
+++ b/.env
@@ -26,3 +26,12 @@ APP_SECRET=79e0b58ba0f9e45953847e8ee2423105
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/vinyl"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
