--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ DATABASE_URL="mysql://root:root@127.0.0.1:3306/vinyl"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+ MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> symfony/google-mailer ###
