reset-password working

--- a/.env
+++ b/.env
@@ -26,3 +26,9 @@ APP_SECRET=79e0b58ba0f9e45953847e8ee2423105
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/vinyl"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://d975c9baed8e79:4d92856e0f0d49@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+###< symfony/mailer ###
+
+
