--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "easycorp/easyadmin-bundle": "^3.5",
         "mailjet/mailjet-apiv3-php": "^1.5",
         "sensio/framework-extra-bundle": "^6.2",
+        "stripe/stripe-php": "^7.121",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
