--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,6 +37,7 @@ security:
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/account, roles: ROLE_USER }
+         - { path: ^/cart, roles: ROLE_USER }
          - { path: ^/order, roles: ROLE_USER }
 
 when@test:
